fix(Tabs): Fix tabs component overflow issue

--- a/packages/ui-components/Common/Tabs/index.module.css
+++ b/packages/ui-components/Common/Tabs/index.module.css
@@ -1,7 +1,7 @@
 @reference "../../styles/index.css";
 
 .tabsRoot {
-  @apply max-w-full;
+  @apply grid max-w-full;
 
   .tabsList {
     @apply font-open-sans
